# edu-standalone-activities

./: AGENTS.md  CLAUDE.md  README.md
python/course-repo/: pyproject.toml
python/course-repo/demo/: index.html
python/course-repo/demo/conflict-policy/: index.html
python/course-repo/exercise/01-durable-job-queue/src/webhooks/: activities.py  send_via_workflow.py  workflow.py
python/course-repo/exercise/01-skip-the-workflow/src/webhooks/: activities.py  send_via_workflow.py  workflow.py
python/course-repo/exercise/02-idempotency-and-crash-safety/src/webhooks/: activities.py  send_standalone.py  worker.py
python/course-repo/exercise/03-concurrency-and-rate-limits/src/webhooks/: send_bulk.py  send_standalone.py  worker.py
python/course-repo/exercise/03-dedup-via-id-reuse/src/webhooks/: send_double.py  worker.py
python/course-repo/exercise/04-concurrency-and-rate-limits/src/webhooks/: send_bulk.py  send_priority_demo.py  worker.py
python/course-repo/exercise/04-dedup-via-id-reuse/src/webhooks/: send_double.py  shared.py  worker.py
python/course-repo/exercise/05-heartbeats-and-checkpointing/src/webhooks/: activities.py  send_batch.py  worker.py
python/course-repo/exercise/06-same-code-runs-anywhere/src/webhooks/: send_via_workflow.py  worker.py  workflow.py
python/course-repo/scripts/: kill-worker.sh  reset-echo.sh  reset-receiver.sh  restart-worker.sh  stop-demo-and-reset.sh
python/course-repo/server/: control_panel.py  echo_server.py  webhook_receiver.py
python/course-repo/solution/01-durable-job-queue/src/webhooks/: activities.py  shared.py  (+3 more)
(+161 files in other folders)
